# datacopter

./: .gitignore  Cargo.toml  at.txt  pipeline.yaml  robot.txt
.cargo/: config.toml
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs
src/connectors/: mock.rs  mod.rs
src/connectors/clickhouse/: mod.rs  sink.rs  source.rs
src/connectors/duckdb/: mod.rs  sink.rs  source.rs
src/connectors/file_storage/: mod.rs  sink.rs  source.rs
src/connectors/kafka/: mod.rs  sink.rs  source.rs
src/connectors/mongodb/: mod.rs  sink.rs  source.rs
src/connectors/mysql/: mod.rs  sink.rs  source.rs
src/connectors/postgres/: mod.rs  sink.rs  source.rs
src/connectors/rabbitmq/: mod.rs  sink.rs  source.rs
src/connectors/s3/: mod.rs  sink.rs  source.rs
src/connectors/sqlite/: mod.rs  sink.rs  source.rs
src/core/: autotune.rs  engine.rs  mod.rs  types.rs
src/wal/: manager.rs  mod.rs  recovery.rs
